src/ConfRoomApp/main/default/objects/Conference_Room__c/Conference_Room__c.object-meta.xml
<CustomObject>
    <label>Conference Room</label>
    <nameField>
        <label>Conference Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conference Room</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>