src/ConfRoomApp/main/default/objects/Conference_Room__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wakad Level 3</fullName>
            </value>
            <value>
                <fullName>Baner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>